tdf#84684 RTF import: fix ZOrder of child shapes inside group shape

Both ODF and OOXML's drawingML seem to just not write ZOrder for child
shapes (instead they just describe them in a bottom-up order), but RTF
does use dhgt, it seems. Given that ZOrder has different meaning inside
and outside a group shape use a stack of GraphicZOrderHelpers to get the
correct result.

Change-Id: I68dbd9f0ae59a1759da14bf414dc1d277d1c927d